--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -12,7 +12,7 @@ eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eur
 spring.application.name=qingyun-file
 #日志配置
 logging.file.name=/qingyunshare/qingyun-file/log/web.log
-logging.level.root=info
+logging.level.root = debug
 
 #mybatis配置
 mybatis.type-aliases-package=com.qingyunshare.file.domain
@@ -21,12 +21,12 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 
-#数据库初始化
-spring.datasource.data=classpath:database/data.sql
-spring.datasource.sql-script-encoding=utf-8
-spring.datasource.initialization-mode=ALWAYS
+##数据库初始化
+#spring.datasource.data=classpath:database/data.sql
+#spring.datasource.sql-script-encoding=utf-8
+#spring.datasource.initialization-mode=ALWAYS
 #jpa配置
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 #数据库表命名规则
@@ -49,7 +49,12 @@ mybatis-plus.mapper-locations=classpath:mapper/*.xml
 mybatis-plus.configuration.map-underscore-to-camel-case=false
 mybatis-plus.global-config.banner=false
 
+
+
 #存储类型
+    # 0-本地存储，
+    # 1-阿里云OSS存储，
+    # 2-fastDFS存储
 ufop.storage-type=0
 #文件存储路径
 ufop.local-storage-path=E:/share-drive
@@ -107,7 +112,7 @@ spring.elasticsearch.rest.password=
 
 
 # 当前部署外网IP，用于office预览
-#deployment.host=127.0.0.1:${server.port}
-deployment.host=172.26.154.189:${server.port}
+deployment.host=10.10.10.106:${server.port}
+#deployment.host=172.26.154.189:${server.port}
 
 
